corpus/c/syntax/case-11/snapshots/gcc9_12/single_sink_structured/render.default.txt
error: [syntax] expected ';' before '}' token @ src/main.c:2:13
want: ;
near: } token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
  patch: src/main.c
  2 -     return 0
  2 +     return 0;